fix(registry): deterministic encoder order + honest accepts() (fixes Windows build)
VortexWriter.create(.., WriteRegistry) with no cascade selects the first encoder
whose accepts() matches the dtype, iterating WriteRegistry.encoderMap().values().
Two coupled defects made that selection wrong and unstable:

1. The map was Map.copyOf(HashMap) — non-deterministic iteration order — so the
   chosen encoder varied across runs and platforms.
2. ChunkedEncodingEncoder.accepts(Primitive) returned true, but encode() requires
   a ChunkedData wrapper the dtype-based write path never produces. It is not in
   DEFAULT_CODECS or the cascade and nothing dtype-dispatches to it — it is only
   reachable here. On Windows the hash order put it first for a plain long[],
   throwing ClassCastException; other platforms happened to order a leaf encoder
   first.

Fixes (root, not symptom):
- Both WriteRegistry and ReadRegistry back their maps with a TreeMap ordered by
  encoding name (Comparator.comparing(id) — Enum.compareTo is final, so natural
  enum order is ordinal and a Comparator is needed). Order is now a pure function
  of the registered set, independent of registration sequence or ServiceLoader's
  unspecified iteration order.
- ChunkedEncodingEncoder.accepts() returns false: it is carrier-dispatched
  (selected explicitly when a caller holds ChunkedData), never dtype-dispatched,
  so it must not be a first-match candidate. Its explicit-encode path is
  unchanged and still covered by ChunkedEncodingEncoderTest.

Tests:
- WriteRegistryTest pins name-ordered iteration regardless of registration
  sequence, and that loadAll() is sorted by name.
- ReadRegistryTest covers that a TreeMap-backed registry retains all decoders.
- create_withFullRegistry_roundTrips drives the exact failing combination —
  create(loadAll()) -> writeChunk -> read back — as an end-to-end regression
  guard, rather than dodging it with a hand-picked single-encoder registry.

Co-Authored-By: Claude Opus 4.8 <